[tool.poetry]
name = "ben-wiki"
version = "0.1.0"
description = "A wiki using mkdocs and mkdocs jupyter meant to serve as a portfolio and blog for my software engineering endeavors."
authors = ["Ben Hill <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-jupyter = "^0.20.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
